<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/Login_Layout"
    android:background="@drawable/login_bg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/Login_LogoImage"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:paddingBottom="30dp"
        android:layout_marginTop="@dimen/Dim40dp"
        app:srcCompat="@drawable/travia_logo"
        android:contentDescription="@string/str_img_desc"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Login_EmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingStart="@dimen/Dim20dp"
        android:paddingEnd="@dimen/Dim20dp"
        android:textColorHint="@color/LoginText"
        android:layout_below="@id/Login_LogoImage">

        <EditText
            android:id="@+id/Login_txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/Dim10dp"
            android:drawableStart="@drawable/ic_mail_outline_teal_a700_24dp"
            android:ems="10"
            android:hint="@string/str_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/loginAccent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Login_PasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/LoginText"
        android:layout_below="@id/Login_EmailLayout"
        android:gravity="top"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/accent"
        android:layout_alignEnd="@+id/Login_btnLogin"
        android:layout_alignStart="@+id/Login_btnLogin">

        <EditText
            android:id="@+id/Login_txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/str_password_hint"
            android:drawablePadding="@dimen/Dim10dp"
            android:drawableStart="@drawable/ic_lock_teal_a700_24dp"
            android:inputType="textPassword"
            android:textColor="@color/loginAccent"
            android:textColorHint="@color/LoginText"
            android:layout_below="@id/Login_EmailLayout"
            android:layout_alignEnd="@+id/Login_btnLogin" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Login_btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_ripple"
        android:layout_marginTop="@dimen/Dim20dp"
        android:layout_marginStart="@dimen/LoginPagePaddingLeft"
        android:layout_marginEnd="@dimen/LoginPagePaddingRight"
        android:text="@string/str_btn_login"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:layout_below="@id/Login_PasswordLayout"/>

    <TextView
        android:id="@+id/Login_txtForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_forgot_pass"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:layout_below="@+id/Login_btnLogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <ProgressBar
        android:id="@+id/Login_prgLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/Login_btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_ripple"
        android:text="@string/str_register"
        android:textAllCaps="false"
        android:textColor="@color/White" />


</RelativeLayout>
