<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/Signup_Layout"
    android:background="@drawable/login_bg"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/Signup_LogoImage"
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:paddingBottom="30dp"
        android:layout_marginTop="@dimen/Dim40dp"
        app:srcCompat="@drawable/travia_logo"
        android:contentDescription="@string/str_img_desc"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Signup_EmailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingStart="@dimen/Dim20dp"
        android:paddingEnd="@dimen/Dim20dp"
        android:textColorHint="@color/LoginText"
        android:layout_below="@id/Signup_LogoImage">

        <EditText
            android:id="@+id/Signup_txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_email_teal_a700_24dp"
            android:ems="10"
            android:hint="@string/str_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/loginAccent" />

    </android.support.design.widget.TextInputLayout>

    <ProgressBar
        android:id="@+id/Signup_prgLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/Signup_CountryCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="18dp"
        android:paddingEnd="0dp"
        android:layout_below="@id/Signup_EmailLayout"
        app:ccp_countryPreference="ID,SG,CN,HK,TW"
        app:ccp_defaultNameCode="ID"
        app:ccp_contentColor="@color/loginAccent"
        app:ccpDialog_backgroundColor="@color/White"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Signup_PhoneLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/LoginText"
        android:layout_below="@id/Signup_EmailLayout"
        android:layout_toEndOf="@id/Signup_CountryCode"
        android:gravity="top">

        <EditText
            android:id="@+id/Signup_txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="9"
            android:hint="@string/str_hint_phone"
            android:inputType="phone"
            android:textColor="@color/loginAccent"
            android:textColorHint="@color/LoginText"
            android:layout_toEndOf="@id/Signup_CountryCode"
            android:layout_below="@id/Signup_EmailLayout"
            android:layout_alignEnd="@+id/Signup_btnSignup" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Signup_btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_ripple"
        android:layout_marginTop="@dimen/Dim30dp"
        android:layout_marginStart="@dimen/LoginPagePaddingLeft"
        android:layout_marginEnd="@dimen/LoginPagePaddingRight"
        android:text="@string/str_btn_signup"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/White"
        android:layout_below="@id/Signup_PhoneLayout"/>

    <TextView
        android:id="@+id/Signup_txtForgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_forgot_pass"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:layout_below="@+id/Signup_btnSignup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/Signup_btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_ripple"
        android:text="@string/str_have_account"
        android:textAllCaps="false"
        android:textColor="@color/White" />
</RelativeLayout>
